@@ -276,11 +276,11 @@ int64ops.cmx : \
 int64ops.cmi :
 loadprinter.cmo : \
     ../typing/types.cmi \
+    ../toplevel/topprinters.cmi \
     ../bytecomp/symtable.cmi \
     printval.cmi \
     ../typing/printtyp.cmi \
     ../typing/path.cmi \
-    parameters.cmi \
     ../utils/misc.cmi \
     ../parsing/longident.cmi \
     ../utils/load_path.cmi \
@@ -291,11 +291,11 @@ loadprinter.cmo : \
     loadprinter.cmi
 loadprinter.cmx : \
     ../typing/types.cmx \
+    ../toplevel/topprinters.cmx \
     ../bytecomp/symtable.cmx \
     printval.cmx \
     ../typing/printtyp.cmx \
     ../typing/path.cmx \
-    parameters.cmx \
     ../utils/misc.cmx \
     ../parsing/longident.cmx \
     ../utils/load_path.cmx \
@@ -318,7 +318,6 @@ main.cmo : \
     ../typing/persistent_env.cmi \
     parameters.cmi \
     ../utils/misc.cmi \
-    loadprinter.cmi \
     ../utils/load_path.cmi \
     input_handling.cmi \
     frames.cmi \
@@ -341,7 +340,6 @@ main.cmx : \
     ../typing/persistent_env.cmx \
     parameters.cmx \
     ../utils/misc.cmx \
-    loadprinter.cmx \
     ../utils/load_path.cmx \
     input_handling.cmx \
     frames.cmx \
